--- a/src/app/components/employee/timesheet/timesheet.component.scss
+++ b/src/app/components/employee/timesheet/timesheet.component.scss
@@ -35,9 +35,12 @@ mat-card {
   font-weight: 600;
 }
 
-.mat-column-timeIn,
 .mat-column-timeOut {
   min-width: 350px;
+}
+
+.mat-column-timeIn {
+  min-width: 150px;
 }
 
 .mat-column-todaysDepartment {
