--- a/src/app/components/employee/timesheet/timesheet.component.html
+++ b/src/app/components/employee/timesheet/timesheet.component.html
@@ -21,6 +21,10 @@
     </mat-form-field>
   </ng-container>
 
+  <div class="mt-4 mb-8" *ngIf="timesheetEntries.data.length">
+    Total records: {{ timesheetEntries.data.length }}
+  </div>
+
   <mat-card>
     <mat-card-content
       class="p-0"
@@ -41,7 +45,7 @@
           <ng-container matColumnDef="timeIn">
             <th mat-header-cell *matHeaderCellDef>Time In</th>
             <td mat-cell *matCellDef="let element">
-              <span class="w-45 d-inline-block">{{
+              <span class="w-45 d-inline-block font-size-16">{{
                 element.timeInDate | date : "dd/MM/yyyy"
               }}</span>
               <mat-form-field appearance="fill" class="w-50 ml-16">
@@ -106,25 +110,29 @@
             <td
               mat-cell
               *matCellDef="let element"
-              class="worked-hours"
-              [ngClass]="{ warning: element.workedHours?.includes('-') }"
+              class="font-size-16"
+              [ngClass]="{
+                warning:
+                  element.workedHours?.includes('-') ||
+                  +(element.workedHours?.split(':')[0] || 0) > 22
+              }"
             >
               {{ element.workedHours || "0:00" }}
             </td>
           </ng-container>
 
-          <ng-container matColumnDef="todaysDepartment">
+          <ng-container matColumnDef="todaysDepartmentId">
             <th mat-header-cell *matHeaderCellDef>Department</th>
             <td mat-cell *matCellDef="let element">
               <mat-form-field appearance="fill" class="w-100">
                 <mat-label>Choose</mat-label>
                 <mat-select
-                  [(ngModel)]="element.todaysDepartment"
+                  [(ngModel)]="element.todaysDepartmentId"
                   name="department-{{ element.employeeId }}"
                 >
                   <mat-option
                     *ngFor="let department of departmentList"
-                    [value]="department.departmentName"
+                    [value]="department.departmentId"
                   >
                     {{ department.departmentName | titlecase }}
                   </mat-option>
