--- a/src/app/components/employee/timesheet/timesheet.component.html
+++ b/src/app/components/employee/timesheet/timesheet.component.html
@@ -76,13 +76,15 @@
                   #timeOutDate="ngModel"
                   (ngModelChange)="timeDifference(element)"
                   [min]="element.timeInDate"
+                  [disabled]="!element.timeIn"
                 />
                 <mat-datepicker-toggle
                   matSuffix
                   [for]="timeOutpicker"
                 ></mat-datepicker-toggle>
                 <mat-datepicker #timeOutpicker></mat-datepicker>
-                <mat-hint>DD/MM/YYYY</mat-hint>
+                <mat-hint *ngIf="element.timeIn">DD/MM/YYYY</mat-hint>
+                <mat-hint *ngIf="!element.timeIn">Disabled</mat-hint>
                 <mat-error *ngIf="timeOutDate?.hasError('matDatepickerParse')">
                   Please enter valid date.</mat-error
                 >
@@ -99,8 +101,10 @@
                   [(ngModel)]="element.timeOut"
                   (ngModelChange)="timeDifference(element)"
                   #timeOut="ngModel"
+                  [disabled]="!element.timeIn"
                 />
-                <mat-hint>hh:mm</mat-hint>
+                <mat-hint *ngIf="element.timeIn">hh:mm</mat-hint>
+                <mat-hint *ngIf="!element.timeIn">Disabled</mat-hint>
               </mat-form-field>
             </td>
           </ng-container>
@@ -130,6 +134,7 @@
                   [(ngModel)]="element.todaysDepartmentId"
                   name="department-{{ element.employeeId }}"
                 >
+                  <mat-option value="">None</mat-option>
                   <mat-option
                     *ngFor="let department of departmentList"
                     [value]="department.departmentId"
