--- a/src/app/components/party/add-party/add-party.component.scss
+++ b/src/app/components/party/add-party/add-party.component.scss
@@ -24,7 +24,12 @@ mat-card {
 }
 
 .col-2 {
-  grid-template-columns: repeat(2, 1fr);
+  grid-template-columns: repeat(3, 1fr);
+}
+
+.name {
+  grid-column-start: 1;
+  grid-column-end: 3;
 }
 
 .gap {
