--- a/src/app/components/party/add-party/add-party.component.html
+++ b/src/app/components/party/add-party/add-party.component.html
@@ -111,6 +111,7 @@
         <mat-form-field appearance="fill">
           <mat-label>Email</mat-label>
           <input matInput formControlName="eMailId" />
+          <mat-hint>Optional</mat-hint>
           <mat-error *ngIf="form.get('eMailId')?.hasError('pattern')"
             >Invalid email</mat-error
           >
