--- a/src/app/components/employee/employee-list/employee-list.component.html
+++ b/src/app/components/employee/employee-list/employee-list.component.html
@@ -13,6 +13,7 @@
   <mat-form-field appearance="fill" class="w-50">
     <mat-label>Filter</mat-label>
     <input matInput (keyup)="applyFilter($event)" #input />
+    <mat-icon matSuffix>search</mat-icon>
     <mat-hint>Applies to all fields</mat-hint>
   </mat-form-field>
 
