--- a/src/app/components/employee/timesheet/timesheet.component.html
+++ b/src/app/components/employee/timesheet/timesheet.component.html
@@ -1,33 +1,48 @@
 <section class="container">
   <h1 class="header letter-spacing-1">Timesheet (Manual)</h1>
-  <ng-container>
-    <mat-form-field appearance="fill" class="mb-24">
-      <mat-label>Attendance Date</mat-label>
-      <input
-        matInput
-        [matDatepicker]="startDatePicker"
-        [formControl]="attendanceDate"
-        (dateChange)="appSharedService.formatDate($event, attendanceDate)"
-      />
-      <mat-hint>DD/MM/YYYY</mat-hint>
-      <mat-datepicker-toggle
-        matIconSuffix
-        [for]="startDatePicker"
-      ></mat-datepicker-toggle>
-      <mat-datepicker #startDatePicker></mat-datepicker>
-      <mat-error *ngIf="attendanceDate?.hasError('required')"
-        >Please enter valid date.</mat-error
-      >
-    </mat-form-field>
-  </ng-container>
+  <section class="search">
+    <div>
+      <mat-form-field appearance="fill" class="mb-16">
+        <mat-label>Attendance Date</mat-label>
+        <input
+          matInput
+          [matDatepicker]="startDatePicker"
+          [formControl]="attendanceDate"
+          (dateChange)="appSharedService.formatDate($event, attendanceDate)"
+        />
+        <mat-hint>DD/MM/YYYY</mat-hint>
+        <mat-datepicker-toggle
+          matIconSuffix
+          [for]="startDatePicker"
+        ></mat-datepicker-toggle>
+        <mat-datepicker #startDatePicker></mat-datepicker>
+        <mat-error *ngIf="attendanceDate?.hasError('required')"
+          >Please enter valid date.</mat-error
+        >
+      </mat-form-field>
+      <mat-form-field appearance="fill" class="ml-16">
+        <mat-label>Department</mat-label>
+        <mat-select [formControl]="departmentId" name="departmentId">
+          <mat-option
+            *ngFor="let department of departmentList"
+            [value]="department.departmentId"
+          >
+            {{ department.departmentName | titlecase }}
+          </mat-option>
+        </mat-select>
+        <mat-error>This field is required.</mat-error>
+      </mat-form-field>
+    </div>
 
-  <span class="ml-16" *ngIf="attendanceDate?.valid">
-    <mat-form-field appearance="fill" class="w-40">
-      <mat-label>Filter</mat-label>
-      <input matInput (keyup)="applyFilter($event)" #input />
-      <mat-hint>Applies to all fields</mat-hint>
-    </mat-form-field>
-  </span>
+    <div *ngIf="attendanceDate?.valid && departmentId.value" class="mb-8 w-40">
+      <mat-form-field appearance="fill" class="w-100">
+        <mat-label>Filter</mat-label>
+        <input matInput (keyup)="applyFilter($event)" #input />
+        <mat-icon matSuffix>search</mat-icon>
+        <mat-hint>Applies to all fields</mat-hint>
+      </mat-form-field>
+    </div>
+  </section>
 
   <mat-card>
     <mat-card-content
@@ -46,70 +61,99 @@
             </td>
           </ng-container>
 
-          <ng-container matColumnDef="timeIn">
-            <th mat-header-cell *matHeaderCellDef>Time In</th>
+          <ng-container matColumnDef="category">
+            <th mat-header-cell *matHeaderCellDef>Category</th>
             <td mat-cell *matCellDef="let element">
-              <span class="w-45 d-inline-block font-size-16">{{
-                element.timeInDate | date : "dd/MM/yyyy"
-              }}</span>
-              <mat-form-field appearance="fill" class="w-50 ml-16">
-                <mat-label>Time In</mat-label>
-                <input
-                  matInput
-                  type="time"
-                  name="timeIn-{{ element.employeeId }}"
-                  [(ngModel)]="element.timeIn"
-                  (ngModelChange)="timeDifference(element)"
-                  #timeIn="ngModel"
-                />
-                <mat-hint>hh:mm</mat-hint>
-              </mat-form-field>
+              {{ element.salaryCategoryName }}
+            </td>
+          </ng-container>
+
+          <ng-container matColumnDef="timeIn">
+            <th mat-header-cell *matHeaderCellDef>Time In / Morning</th>
+            <td mat-cell *matCellDef="let element">
+              <ng-container *ngIf="element.isDaily">
+                <span class="w-45 d-inline-block font-size-16">{{
+                  element.timeInDate | date : "dd/MM/yyyy"
+                }}</span>
+                <mat-form-field appearance="fill" class="w-50 ml-16">
+                  <mat-label>Time In</mat-label>
+                  <input
+                    matInput
+                    type="time"
+                    name="timeIn-{{ element.employeeId }}"
+                    [(ngModel)]="element.timeIn"
+                    (ngModelChange)="timeDifference(element)"
+                    #timeIn="ngModel"
+                  />
+                  <mat-hint>hh:mm</mat-hint>
+                </mat-form-field>
+              </ng-container>
+              <ng-container *ngIf="!element.isDaily">
+                <mat-checkbox
+                  id="morning-{{ element.employeeId }}"
+                  [(ngModel)]="element.isMorningPresent"
+                  name="isMorningPresent"
+                  >Morning Present</mat-checkbox
+                >
+              </ng-container>
             </td>
           </ng-container>
 
           <ng-container matColumnDef="timeOut">
-            <th mat-header-cell *matHeaderCellDef>Time Out</th>
+            <th mat-header-cell *matHeaderCellDef>Time Out / Afternoon</th>
             <td mat-cell *matCellDef="let element">
-              <mat-form-field appearance="fill" class="w-60">
-                <mat-label>Out Date</mat-label>
-                <input
-                  matInput
-                  [matDatepicker]="timeOutpicker"
-                  name="timeOutDate-{{ element.employeeId }}"
-                  [(ngModel)]="element.timeOutDate"
-                  #timeOutDate="ngModel"
-                  (ngModelChange)="timeDifference(element)"
-                  [min]="element.timeInDate"
-                  [disabled]="!element.timeIn"
-                />
-                <mat-datepicker-toggle
-                  matSuffix
-                  [for]="timeOutpicker"
-                ></mat-datepicker-toggle>
-                <mat-datepicker #timeOutpicker></mat-datepicker>
-                <mat-hint *ngIf="element.timeIn">DD/MM/YYYY</mat-hint>
-                <mat-hint *ngIf="!element.timeIn">Disabled</mat-hint>
-                <mat-error *ngIf="timeOutDate?.hasError('matDatepickerParse')">
-                  Please enter valid date.</mat-error
+              <ng-container *ngIf="element.isDaily">
+                <mat-form-field appearance="fill" class="w-60">
+                  <mat-label>Out Date</mat-label>
+                  <input
+                    matInput
+                    [matDatepicker]="timeOutpicker"
+                    name="timeOutDate-{{ element.employeeId }}"
+                    [(ngModel)]="element.timeOutDate"
+                    #timeOutDate="ngModel"
+                    (ngModelChange)="timeDifference(element)"
+                    [min]="element.timeInDate"
+                    [disabled]="!element.timeIn"
+                  />
+                  <mat-datepicker-toggle
+                    matSuffix
+                    [for]="timeOutpicker"
+                  ></mat-datepicker-toggle>
+                  <mat-datepicker #timeOutpicker></mat-datepicker>
+                  <mat-hint *ngIf="element.timeIn">DD/MM/YYYY</mat-hint>
+                  <mat-hint *ngIf="!element.timeIn">Disabled</mat-hint>
+                  <mat-error
+                    *ngIf="timeOutDate?.hasError('matDatepickerParse')"
+                  >
+                    Please enter valid date.</mat-error
+                  >
+                  <mat-error *ngIf="timeOutDate?.hasError('matDatepickerMin')"
+                    >Should be greater than Time In date.
+                  </mat-error>
+                </mat-form-field>
+                <mat-form-field appearance="fill" class="ml-4 w-35">
+                  <mat-label>Time Out</mat-label>
+                  <input
+                    matInput
+                    type="time"
+                    name="timeOut-{{ element.employeeId }}"
+                    [(ngModel)]="element.timeOut"
+                    (ngModelChange)="timeDifference(element)"
+                    #timeOut="ngModel"
+                    [disabled]="!element.timeIn"
+                  />
+                  <mat-hint *ngIf="element.timeIn">hh:mm</mat-hint>
+                  <mat-hint *ngIf="!element.timeIn">Disabled</mat-hint>
+                </mat-form-field>
+              </ng-container>
+              <ng-container *ngIf="!element.isDaily">
+                <mat-checkbox
+                  id="afternoon-{{ element.employeeId }}"
+                  [(ngModel)]="element.isAfterNoonPresent"
+                  name="isAfterNoonPresent"
+                  >Afternoon Present</mat-checkbox
                 >
-                <mat-error *ngIf="timeOutDate?.hasError('matDatepickerMin')"
-                  >Should be greater than Time In date.
-                </mat-error>
-              </mat-form-field>
-              <mat-form-field appearance="fill" class="ml-4 w-35">
-                <mat-label>Time Out</mat-label>
-                <input
-                  matInput
-                  type="time"
-                  name="timeOut-{{ element.employeeId }}"
-                  [(ngModel)]="element.timeOut"
-                  (ngModelChange)="timeDifference(element)"
-                  #timeOut="ngModel"
-                  [disabled]="!element.timeIn"
-                />
-                <mat-hint *ngIf="element.timeIn">hh:mm</mat-hint>
-                <mat-hint *ngIf="!element.timeIn">Disabled</mat-hint>
-              </mat-form-field>
+              </ng-container>
             </td>
           </ng-container>
 
@@ -125,7 +169,9 @@
                   +(element.workedHours?.split(':')[0] || 0) > 22
               }"
             >
-              {{ element.workedHours || "0:00" }}
+              <span *ngIf="element.isDaily">{{
+                element.workedHours || "0:00"
+              }}</span>
             </td>
           </ng-container>
 
@@ -174,7 +220,7 @@
     </mat-card-content>
   </mat-card>
 
-  <div class="footer" *ngIf="attendanceDate?.valid">
+  <div class="footer" *ngIf="attendanceDate?.valid && departmentId.value">
     <button mat-raised-button (click)="resetData()" class="mr-16">
       <mat-icon>refresh</mat-icon>Reset
     </button>
