--- a/src/app/components/party/party-list/party-list.component.html
+++ b/src/app/components/party/party-list/party-list.component.html
@@ -14,6 +14,7 @@
     <mat-form-field appearance="fill" class="w-50 mb-16">
       <mat-label>Filter</mat-label>
       <input matInput (keyup)="applyFilter($event)" #input />
+      <mat-icon matSuffix>search</mat-icon>
       <mat-hint>Party Name or City</mat-hint>
     </mat-form-field>
 
