--- a/src/app/components/employee/timesheet/timesheet.component.html
+++ b/src/app/components/employee/timesheet/timesheet.component.html
@@ -30,6 +30,7 @@
             {{ department.departmentName | titlecase }}
           </mat-option>
         </mat-select>
+        <mat-hint>Employee Department</mat-hint>
         <mat-error>This field is required.</mat-error>
       </mat-form-field>
     </div>
@@ -176,7 +177,7 @@
           </ng-container>
 
           <ng-container matColumnDef="todaysDepartmentId">
-            <th mat-header-cell *matHeaderCellDef>Department</th>
+            <th mat-header-cell *matHeaderCellDef>Worked Department</th>
             <td mat-cell *matCellDef="let element">
               <mat-form-field appearance="fill" class="w-100">
                 <mat-label>Choose</mat-label>
