Fixed stock opening

--- a/src/app/components/payroll/salary-summary/salary-summary.component.html
+++ b/src/app/components/payroll/salary-summary/salary-summary.component.html
@@ -9,7 +9,7 @@
         <mat-datepicker-toggle matIconSuffix [for]="dp"></mat-datepicker-toggle>
         <mat-datepicker
           #dp
-          startView="multi-year"
+          startView="year"
           (monthSelected)="setMonthAndYear($event, dp)"
           panelClass="month-picker"
         >
