--- a/src/app/components/payroll/monthly-salary-list/monthly-salary-list.component.html
+++ b/src/app/components/payroll/monthly-salary-list/monthly-salary-list.component.html
@@ -2,18 +2,14 @@
   <h1 class="header letter-spacing-1">Search Monthly Salary</h1>
   <section class="filter-content">
     <form class="form-container">
-      <mat-form-field appearance="fill" class="w-35 mr-24">
-        <mat-label>Employee</mat-label>
-        <mat-select [formControl]="employeeId">
-          <mat-option
-            *ngFor="let employee of employeeList"
-            [value]="employee.employeeId"
-          >
-            {{ employee.firstName + " " + employee.lastName | titlecase }}
-          </mat-option>
-        </mat-select>
-        <mat-error>This field is required.</mat-error>
-      </mat-form-field>
+      <div class="w-35 mr-24 d-inline-block">
+        <app-employee-combo-box
+          [patch]="employeeId.value"
+          [employeeFormControl]="employeeId"
+          [touched]="employeeId.touched || false"
+        >
+        </app-employee-combo-box>
+      </div>
 
       <mat-form-field appearance="fill" class="w-25 mr-24">
         <mat-label>Payment Month</mat-label>
